--- a/src/webui/_locales/my/messages.json
+++ b/src/webui/_locales/my/messages.json
@@ -315,6 +315,38 @@
         "message": "လတ်ဗီးယား",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Latvia will be used."
     },
+    "settings#egress-region#select-id": {
+        "message": "အင်ဒိုနီးရှား",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Indonesia will be used."
+    },
+    "settings#egress-region#select-nz": {
+        "message": "နယူးဇီလန်",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in New Zealand will be used."
+    },
+    "settings#egress-region#select-gr": {
+        "message": "ဂရိ",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Greece will be used."
+    },
+    "settings#egress-region#select-hr": {
+        "message": "ခရိုအေးရှား",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Croatia will be used."
+    },
+    "settings#egress-region#select-pt": {
+        "message": "ပေါ်တူဂီ",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Portugal will be used."
+    },
+    "settings#egress-region#select-ua": {
+        "message": "ယူကရိန်း",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Ukraine will be used."
+    },
+    "settings#egress-region#select-co": {
+        "message": "ကိုလံဘီယာ",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Colombia will be used."
+    },
+    "settings#egress-region#select-my": {
+        "message": "မလေးရှား",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Malaysia will be used."
+    },
     "settings#egress-region#description": {
         "message": "Psiphon သည် မတူညီသောနိုင်ငံများနှင့်ဒေသများရှိ ဆာဗာများရှိပါသည်။ သင်နေထိုင်သောနိုင်ငံ နှင့် နီးစပ်သော Psiphon ဆာဗာ ကိုအသုံးပြု၍ ပိုကောင်းမွန်သော ချိတ်ဆက်မှုရရှိနိုင်ပါသည်။ သို့သော်လည်း သတ်မှတ်ထားသော နိုင်ငံဒေသဆီ သို့ အွန်လိုင်းစနစ်ဖြင့် ရောက်ရှိနေ၍ ထိုနေရာမှသာပင် ရရှိနိုင်မည့် ဝဘ်ဆိုက်နှင့် ဝန်ဆောင်မှုများကို သင် ရစေလိုနိုင်ပါသည်။",
         "description": "Help text in the 'Psiphon Server Region' settings section explaining what the option is and why the user may want to override the default ('best') setting value. The word 'Psiphon' must not be translated or transliterated."
