--- a/src/webui/_locales/zh/messages.json
+++ b/src/webui/_locales/zh/messages.json
@@ -324,19 +324,19 @@
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in New Zealand will be used."
     },
     "settings#egress-region#select-gr": {
-        "message": "Greece",
+        "message": "希腊",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Greece will be used."
     },
     "settings#egress-region#select-hr": {
-        "message": "Croatia",
+        "message": "克罗地亚",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Croatia will be used."
     },
     "settings#egress-region#select-pt": {
-        "message": "Portugal",
+        "message": "葡萄牙",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Portugal will be used."
     },
     "settings#egress-region#select-ua": {
-        "message": "Ukraine",
+        "message": "乌克兰",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Ukraine will be used."
     },
     "settings#egress-region#select-co": {
@@ -344,7 +344,7 @@
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Colombia will be used."
     },
     "settings#egress-region#select-my": {
-        "message": "Malaysia",
+        "message": "马来西亚",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Malaysia will be used."
     },
     "settings#egress-region#description": {
