--- a/src/webui/_locales/my/messages.json
+++ b/src/webui/_locales/my/messages.json
@@ -315,6 +315,10 @@
         "message": "လတ်ဗီးယား",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Latvia will be used."
     },
+    "settings#egress-region#select-lt": {
+        "message": "လစ်သူအေးနီးယား",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Lithuania will be used."
+    },
     "settings#egress-region#select-id": {
         "message": "အင်ဒိုနီးရှား",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Indonesia will be used."
@@ -668,8 +672,8 @@
         "description": "Appears in the notification area balloon when Psiphon has been minimized to the Windows' notification area (aka 'system tray' aka 'systray', the area of the taskbar with the clock, battery indicator, and other icons)."
     },
     "appbackend#os-unsupported": {
-        "message": "PsiCash သည် Windows XP နှင့် Vista တို့ကို မထောက်ပံ့တော့ပါ။\nပိုမိုသိရှိရန်အတွက် ကျွန်ုပ်တို့ ဝဘ်ဆိုက်တွင် ကြည့်ရှုပေးပါ။",
-        "description": "Appears in a message box when Psiphon is run on an unsuppoted version of Windows. Is followed by a URL."
+        "message": "Psiphon only supports Windows 10 and newer.\nPlease visit our website for more information.",
+        "description": "Appears in a message box when Psiphon is run on an unsupported version of Windows. Is followed by a URL."
     },
     "psicash#transaction-error-title": {
         "message": "PsiCash ရောင်းဝယ်ခြင်း ချို့ယွင်းမှု",
