--- a/src/webui/_locales/vi/messages.json
+++ b/src/webui/_locales/vi/messages.json
@@ -315,6 +315,10 @@
         "message": "Latvia",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Latvia will be used."
     },
+    "settings#egress-region#select-lt": {
+        "message": "Lithuania",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Lithuania will be used."
+    },
     "settings#egress-region#select-id": {
         "message": "Indonesia",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Indonesia will be used."
@@ -668,8 +672,8 @@
         "description": "Appears in the notification area balloon when Psiphon has been minimized to the Windows' notification area (aka 'system tray' aka 'systray', the area of the taskbar with the clock, battery indicator, and other icons)."
     },
     "appbackend#os-unsupported": {
-        "message": "Psiphon không còn hỗ trợ cho Windows XP hay Vista\nXin xem trang web chúng tôi để biết thêm thông tin.",
-        "description": "Appears in a message box when Psiphon is run on an unsuppoted version of Windows. Is followed by a URL."
+        "message": "Psiphon only supports Windows 10 and newer.\nPlease visit our website for more information.",
+        "description": "Appears in a message box when Psiphon is run on an unsupported version of Windows. Is followed by a URL."
     },
     "psicash#transaction-error-title": {
         "message": "Lỗi giao dịch PsiCash",
